# proof-pr

./: .gitignore  PUBLICATION.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: proof-pr-receipt.yml  proof-pr-validate.yml
docs/: dogfood-sample-dashboard.md  example-receipts.md  github-action-validation.md  proof-pr-v1.md  release-checklist.md  stable-dogfood-contract.md
examples/: pr-022-proof-pr-test-harness.json  pr-024-sample-dashboard-rollups.json  pr-054-bridge-db-license.json  pr-055-bridge-db-schema-concurrency.json  pr-087-github-repo-auditor-dogfood.json  proof-pr-self-template.config.example.json  proof-pr.config.example.json
schemas/: proof-pr.v1.schema.json
scripts/: check_public_git_metadata.py  proof_pr.py  test_example_pattern_cli.py  test_examples_cli.py  test_receipt_hygiene_cli.py  validate_receipts.py
src/proof_pr/: __init__.py  cli.py  public_git_metadata.py  validate_receipts.py
