[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-pr"
version = "0.2.0"
description = "Proof-carrying pull request receipt standard and CLI."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "proof-pr maintainers" }
]
keywords = ["pull-request", "review", "verification", "ci", "proof"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/saagpatel/proof-pr"
Repository = "https://github.com/saagpatel/proof-pr"
Issues = "https://github.com/saagpatel/proof-pr/issues"

[project.scripts]
proof-pr = "proof_pr.cli:main"
proof-pr-validate-receipts = "proof_pr.validate_receipts:main"

[tool.setuptools.packages.find]
where = ["src"]
